# crowemi-trades

./: .coverage  .gitignore  README.md  current_data.json  main.py  pyproject.toml
.github/workflows/: lambda_get_data.yml  main.yml  process_get_data.yml
crowemi_trades/helpers/: aws.py  core.py  logging.py  polygon.py
crowemi_trades/indicators/: base_indicator.py  enum.py  session_indicator.py  smma_indicator.py
crowemi_trades/processes/: process_apply_indicators.py  process_core.py  process_get_data.py
crowemi_trades/storage/: base_storage.py  mongodb_storage.py  s3_storage.py
crowemi_trades/tests/: test_polygon.py
crowemi_trades/utilities/: backfill_indicator.py  get_daily_data.py
helpers/: polygon.py  polygon_helper.py
indicators/: base.py  smma.py  smma_indicator.py
lambda/get_daily_data/: Dockerfile  get_daily_data.py
lambda/get_data/: Dockerfile  README.md  deploy.py  get_daily_data.py  get_data.py  requirements.txt
notebooks/: general_analysis.ipynb  sma_indicator.ipynb
notebooks/indicators/: smma_indicator.ipynb
storage/: base_storage.py  s3_storage.py
tests/: data.json  test_common.py  test_indicators.py  test_polygon.py  test_processes.py  test_storage.py  test_utilities.py
tests/helpers/: test_aws.py
tests/indicators/: test_session_indicator.py  test_smma_indicator.py
tests/processes/: test_process_apply_indicators.py  test_process_get_data.py
tests/storage/: test_mongodb.py  test_storage.py
utilities/: get_daily_data.py  get_data.py
