[tool.poetry]
name = "crowemi-trades"
version = "0.1.13"
description = ""
authors = ["crowemi <crowemi@hotmail.com>"]
readme = "README.md"
packages = [
    { include = "crowemi_trades" }
]

[tool.poetry.dependencies]
python = "~3.9"
boto3 = "~1.26"
polygon-api-client = "^1.6.1"
polars = "^0.15.16"
pyarrow = "^10.0.1"
crowemi-helps = {git = "https://github.com/crowemi/crowemi-helps.git", rev = "0.1.10"}
pandas = "^1.5.3"
smart-open = "^6.3.0"

[tool.poetry.group.trade.dependencies]
ta-lib = "^0.4.25"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
