[tool.poetry]
name = "crowemi-trades"
version = "0.1.14"
description = ""
authors = ["crowemi <crowemi@hotmail.com>"]
readme = "README.md"
packages = [
    { include = "crowemi_trades" }
]

[tool.poetry.dependencies]
python = "~3.9"
boto3 = "~1.26"
polygon-api-client = "^1.6.1"
polars = "^0.15.16"
pyarrow = "^10.0.1"
pandas = "^1.5.3"
smart-open = "^6.3.0"
plotly = "^5.14.0"
coverage = "^7.2.2"

[tool.poetry.group.trade.dependencies]
ta-lib = "^0.4.25"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
jupyter = "^1.0.0"
localstack = "^2.0.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
